# Design-Synapse

./: .env.example  .gitignore  .gitmessage  .pre-commit-config.yaml  README.md  apply_knowledge_migration.py  apply_migration_manually.py  apply_project_migration.py  check_cascade.py  check_tables.py  cleanup_project_tables.py  docker-compose.yml  requirements-dev-filtered.txt  requirements-dev.txt  reset_alembic.py  restore_versions.py  test_tidb_connection.py  verify_all_migrations.py  verify_design_schema.py
apps/knowledge-service/: alembic.ini  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  setup.py
apps/knowledge-service/knowledge_service/: __init__.py  main.py  schemas.py
apps/knowledge-service/knowledge_service/api/: citations.py  dependencies.py  router.py  search.py
apps/knowledge-service/knowledge_service/core/: config.py  database.py  exceptions.py  llm.py  pdf.py  vector_search.py
apps/knowledge-service/knowledge_service/infrastructure/: __init__.py  database.py
apps/knowledge-service/knowledge_service/models/: __init__.py  bookmark.py  resource.py
apps/knowledge-service/knowledge_service/services/: llm.py  pdf_processing.py  project_knowledge.py  vector_search.py
apps/knowledge-service/migrations/: env.py
apps/knowledge-service/migrations/versions/: 05ba133d512c_initial_migration.py  c3d4e5f6a7b8_initial_migration_tidb.py
apps/knowledge-service/tests/: conftest.py  factories.py  utils.py
apps/knowledge-service/tests/fixtures/: models.py
apps/knowledge-service/tests/integration/: test_project_knowledge.py
docs/: DESIGN.md  (+9 more)
(+259 files in other folders)
